# zhihu_android_crawler

./: LICENSE  README.md  README_CN.md  pom.xml  pyproject.toml
crawler_utils/: pom.xml
crawler_utils/src/test/java/xyz/lostjay/spider/utils/: FileManagerTest.java  RequestManagerTest.java
reverse_server/: pom.xml
reverse_server/src/test/java/xyz/lostjay/spider/zhihu/android/: ZhihuAndroidAppEmulatorTest.java
test/: test_zhihu_android.py
